--- a/cloudbuild-backend.yaml
+++ b/cloudbuild-backend.yaml
@@ -1,7 +1,11 @@
 steps:
   # Build the backend Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/recipe-backend', './backend']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/recipe-backend'
+      - './backend'
 
   # Push the image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
