--- a/cloudbuild-backend.yaml
+++ b/cloudbuild-backend.yaml
@@ -5,11 +5,13 @@ steps:
       - 'build'
       - '-t'
       - 'gcr.io/$PROJECT_ID/recipe-backend'
-      - './backend'
+      - './backend'   # must point to backend folder
 
   # Push the image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/recipe-backend']
+    args:
+      - 'push'
+      - 'gcr.io/$PROJECT_ID/recipe-backend'
 
   # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
@@ -22,7 +24,7 @@ steps:
       - '--platform'
       - 'managed'
       - '--region'
-      - 'us-central1'
+      - 'europe-west1'  # match your trigger region
       - '--allow-unauthenticated'
       - '--port'
       - '5000'
