--- a/cloudbuild-backend.yaml
+++ b/cloudbuild-backend.yaml
@@ -1,33 +1,22 @@
-steps:
-  # Build the backend Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'build'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/recipe-backend'
-      - './backend'   # must point to backend folder
+steps: 
+  # Build the backend Docker image 
+  - name: 'gcr.io/cloud-builders/docker' 
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/app-backend', './backend'] 
+  
+  # Push the image to Container Registry 
+  - name: 'gcr.io/cloud-builders/docker' 
+  args: ['push', 'gcr.io/$PROJECT_ID/app-backend'] 
+  
+  # Deploy to Cloud Run 
+  - name: 'gcr.io/cloud-builders/gcloud' 
+  args: [ 
+    'run', 'deploy', 'app-backend', 
+    '--image', 'gcr.io/$PROJECT_ID/app-backend', 
+    '--platform', 'managed', 
+    '--region', 'us-central1', 
+    '--allow-unauthenticated', 
+    '--port', '5000' 
+  ] 
 
-  # Push the image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'push'
-      - 'gcr.io/$PROJECT_ID/recipe-backend'
-
-  # Deploy to Cloud Run
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'run'
-      - 'deploy'
-      - 'recipe-backend'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/recipe-backend'
-      - '--platform'
-      - 'managed'
-      - '--region'
-      - 'europe-west1'  # match your trigger region
-      - '--allow-unauthenticated'
-      - '--port'
-      - '5000'
-
-options:
+options: 
   logging: CLOUD_LOGGING_ONLY
